@@ -38,7 +38,7 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocumen
 @Service
 public class UploadContestedCaseDocumentsAboutToSubmitHandler extends FinremCallbackHandler {
 
-    private static List<CaseDocumentType> administrativeCaseDocumentTypes = List.of(
+    private static final List<CaseDocumentType> ADMINISTRATIVE_CASE_DOCUMENT_TYPES = List.of(
         CaseDocumentType.ATTENDANCE_SHEETS,
         CaseDocumentType.JUDICIAL_NOTES,
         CaseDocumentType.JUDGMENT,
@@ -76,15 +76,18 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandler extends FinremCall
     @Override
     public GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handle(FinremCallbackRequest callbackRequest,
                                                                               String userAuthorisation) {
+        log.info(CallbackHandlerLogger.aboutToSubmit(callbackRequest));
+
         FinremCaseDetails caseDetails = callbackRequest.getCaseDetails();
         FinremCaseData caseData = caseDetails.getData();
         GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> response = getValidatedResponse(caseData);
 
-        List<UploadCaseDocumentCollection> managedCollections = caseData.getManageCaseDocumentsWrapper()
-            .getManageCaseDocumentCollection();
         if (response.hasErrors()) {
             return response;
         }
+
+        List<UploadCaseDocumentCollection> managedCollections = caseData.getManageCaseDocumentsWrapper()
+            .getManageCaseDocumentCollection();
 
         CaseDocumentParty loggedInUserRole =
             getActiveUserCaseDocumentParty(caseDetails.getId().toString(), userAuthorisation);
@@ -115,9 +118,9 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandler extends FinremCall
         if (CollectionUtils.isEmpty(managedCollections)) {
             return;
         }
-        managedCollections.stream().forEach(uploadCaseDocumentCollection -> {
+        managedCollections.forEach(uploadCaseDocumentCollection -> {
             CaseDocumentType caseDocumentType = uploadCaseDocumentCollection.getUploadCaseDocument().getCaseDocumentType();
-            if (administrativeCaseDocumentTypes.contains(caseDocumentType)) {
+            if (ADMINISTRATIVE_CASE_DOCUMENT_TYPES.contains(caseDocumentType)) {
                 errors.add(caseDocumentType.getId() + " cannot be uploaded using this event");
             }
         });
@@ -153,7 +156,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandler extends FinremCall
         if (caseAssignedUserRole != null) {
             List<CaseAssignedUserRole> caseAssignedUserRoleList = caseAssignedUserRole.getCaseAssignedUserRoles();
             if (!caseAssignedUserRoleList.isEmpty()) {
-                String loggedInUserCaseRole = caseAssignedUserRoleList.get(0).getCaseRole();
+                String loggedInUserCaseRole = caseAssignedUserRoleList.getFirst().getCaseRole();
                 log.info("logged-in user role {} in Case ID: {}", loggedInUserCaseRole, caseId);
                 return getRole(logMessage, caseId, loggedInUserCaseRole);
             }
